fix issue with fact-box hidden by turtle

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -194,6 +194,9 @@
         left: 0;
         width: 100%;
     }
+    .scene3__facts2 {
+        z-index: 1;
+    }
 
     /* SCENE 4 */
     .scene4 {
